--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@babel/preset-react": "^7.26.3",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
+    "dotenv": "^16.4.7",
     "postcss": "^8.4.49",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.17"
