--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.5.2",
+    "@ant-design/icons": "^5.6.1",
     "@capacitor/android": "^6.2.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.9",
     "@react-three/drei": "^9.117.2",
     "@react-three/fiber": "^8.17.10",
+    "@remixicon/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -41,7 +42,7 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
