--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mapbox-gl": "^3.8.0",
     "ol": "^10.2.1",
     "path-browserify": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
