--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "china-division": "^2.7.0",
     "cors": "^2.8.5",
-    "daily-discover-ui": "file:",
     "dompurify": "^3.2.4",
     "formik": "^2.4.6",
     "leaflet": "^1.9.4",
@@ -43,7 +42,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
@@ -92,10 +91,15 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
-    "autoprefixer": "^10.4.20",
+    "@capacitor/cli": "^7.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.2.1",
     "dotenv": "^16.4.7",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.17"
   },
