--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/drei": "^9.117.2",
     "@react-three/fiber": "^8.17.10",
     "@remixicon/react": "^4.6.0",
+    "@stomp/stompjs": "^7.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -57,6 +58,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
     "three": "^0.170.0",
     "url": "^0.11.4",
