refactor(components): 重构 Discover 组件并添加新功能
- 移除了 DailyTask、GameCard 和 GameLobby 组件
- 新增了 MatchThree、TetrisGame 和 SnakeGame 组件
- 重构了 Discover 组件的界面和逻辑，支持游戏列表展示和游戏内嵌
- 优化了游戏数据的获取方式，模拟了 API 请求
- 改进了游戏启动和退出的处理机制
- 统一了游戏难度和推荐的展示样式

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "cors": "^2.8.5",
     "dompurify": "^3.2.4",
     "formik": "^2.4.6",
+    "hls.js": "^1.6.4",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.8.0",
     "ol": "^10.2.1",
     "path-browserify": "^1.0.1",
