feat(product): 优化商品详情页功能和样式
- 重构页面布局和样式,提升用户体验
- 添加客服功能,实现在线聊天
- 优化商品信息展示,增加销量、库存等数据
- 改进规格选择和购买流程
- 统一按钮样式,提升页面美观度

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,5 +33,8 @@
     "rules": {
       // 禁用未使用变量的规则
       "no-unused-vars": "off"
-    }
+    },
+  "globals": {
+    "process": "readonly"
+  }
 }
