--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
