fix: 修改文件名大小写

--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "@react-three/fiber": "^8.17.10",
     "@remixicon/react": "^4.6.0",
     "@stomp/stompjs": "^7.1.1",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^19.0.0",
     "aframe": "^1.6.0",
     "antd": "^5.25.4",
-    "axios": "^1.7.9",
+    "antd-mobile": "^5.29.1",
+    "axios": "^1.4.0",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
     "china-division": "^2.7.0",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dompurify": "^3.2.4",
     "formik": "^2.4.6",
@@ -40,10 +42,10 @@
     "ol": "^10.2.1",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
@@ -54,10 +56,13 @@
     "react-markdown": "^9.1.0",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^7.0.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
@@ -70,9 +75,9 @@
     "yup": "^1.5.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -101,14 +106,18 @@
     "@capacitor/cli": "^7.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.21",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.2.1",
+    "cssnano": "^7.0.7",
     "dotenv": "^16.4.7",
-    "postcss": "^8.5.3",
+    "postcss": "^8.4.23",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.2.2",
     "react-app-rewired": "^2.2.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.3.2"
   },
   "resolutions": {
     "nth-check": "^2.1.1",
