--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^19.0.0",
     "aframe": "^1.6.0",
     "antd": "^5.25.4",
     "antd-mobile": "^5.29.1",
@@ -117,7 +116,8 @@
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^10.2.2",
     "react-app-rewired": "^2.2.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   },
   "resolutions": {
     "nth-check": "^2.1.1",
