refactor(theme): 重构主题系统并移除未使用的样式
- 删除了未使用的 .eslintrc 文件
- 更新了 App.js，引入了新的 GlobalStyles 组件
- 移除了 ExamplePage.js 文件
- 删除了 Daily.css 中未使用的样式
- 移除了 ForgotPasswordPage.css 和 LoginPage.css 文件
- 重构了 RegisterPage.js，使用了新的表单组件和样式
- 删除了 FormComponents.css 文件

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
     // 规则
     "rules": {
       // 禁用未使用变量的规则
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "react/prop-types": "off"
     },
   "globals": {
     "process": "readonly"
