--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@capacitor/cli": "^7.2.0",
+    "@playwright/test": "^1.53.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.3",
