docs(theme): 更新主题设计系统文档并添加代码清理指南
- 重构了主题设计系统文档，增加了核心原则、架构设计等内容
- 添加了代码清理指南，列出了待处理的问题和优先修复项
- 更新了组件使用指南，明确了设计令牌、样式工具函数等的使用方法
- 增加了暗色模式支持和样式工具函数的详细说明

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "china-division": "^2.7.0",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
+    "daily-discover-ui": "file:",
     "dompurify": "^3.2.4",
     "formik": "^2.4.6",
     "hls.js": "^1.6.4",
