--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "yup": "^1.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node --max_old_space_size=8192 ./node_modules/react-scripts/bin/react-scripts.js start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
