--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@capacitor/android": "^6.2.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@loaders.gl/core": "^4.3.3",
     "@loaders.gl/gis": "^4.3.3",
     "@mui/core-downloads-tracker": "^6.1.10",
@@ -19,6 +19,7 @@
     "@react-three/drei": "^9.117.2",
     "@react-three/fiber": "^8.17.10",
     "@remixicon/react": "^4.6.0",
+    "@stagewise/toolbar": "^0.4.6",
     "@stomp/stompjs": "^7.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -31,6 +32,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "china-division": "^2.7.0",
     "classnames": "^2.3.2",
+    "core-js": "^3.43.0",
     "cors": "^2.8.5",
     "daily-discover-ui": "file:",
     "dompurify": "^3.2.4",
@@ -63,6 +65,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "regenerator-runtime": "^0.14.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
