--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.2.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "cssnano": "^7.0.7",
     "dotenv": "^16.4.7",
     "postcss": "^8.4.23",
