--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.1.9",
     "@react-three/drei": "^9.117.2",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.8.2",
     "@remixicon/react": "^4.6.0",
     "@stagewise/toolbar": "^0.4.6",
     "@stomp/stompjs": "^7.1.1",
@@ -58,7 +59,7 @@
     "react-markdown": "^9.1.0",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
