--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ol": "^10.2.1",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
